--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
 		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:3,bgColor:'#e05f1a',color:'White', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2022-01-06 23:59:59 &#43;00:00, Submission Deadline: 2022-01-13 23:59:59 &#43;00:00, Notification Due: 2022-04-29</p></li>
 		<li data-timeline-node="{start:'2022-01-26 08:00:00',end:'2022-02-02 08:00:00',row:1,bgColor:'Wheat',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26 08:00:00 HKT, Submission Deadline: 2022-02-02 08:00:00 HKT, Notification Due: 2022-03-28</p></li>
 		<li data-timeline-node="{start:'2022-06-06 00:00:00',end:'2022-06-10 23:59:59',row:3,bgColor:'#e05f1a',color:'White', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26, Submission Deadline: 2022-02-02, Notification Due: 2022-03-28</p></li>
-		<li data-timeline-node="{start:'2022-01-03 08:00:00',end:'2022-01-10 08:00:00',row:1,bgColor:'Wheat',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FCCM 2022</strong><p class="event-content">CCF Rank: C, When: May 15-18, 2022, Abstract Deadline: 2022-01-03 08:00:00 HKT, Submission Deadline: 2022-01-10 08:00:00 HKT, Notification Due: 2022-03-21</p></li>
-		<li data-timeline-node="{start:'2022-05-15 00:00:00',end:'2022-05-18 23:59:59',row:3,bgColor:'#e05f1a',color:'White', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FCCM 2022</strong><p class="event-content">CCF Rank: C, When: May 15-18, 2022, Abstract Deadline: 2022-01-03, Submission Deadline: 2022-01-10, Notification Due: 2022-03-21</p></li>
 		<li data-timeline-node="{start:'2022-02-28 00:00:00',end:'2022-03-04 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ASPLOS 2022</strong><p class="event-content">CCF Rank: A, When: Feb 28-Mar 4, 2022, Abstract Deadline: 2021-08-06 14:59:59 -07:00, Submission Deadline: 2021-08-13 14:59:59 -07:00, Notification Due: 2021-11-15</p></li>
 		<li data-timeline-node="{start:'2022-02-21 00:00:00',end:'2022-02-24 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FAST 2022</strong><p class="event-content">CCF Rank: A, When: Feb 21-24, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-09-23 23:59:59 -07:00, Notification Due: 2021-12-10</p></li>
 		<li data-timeline-node="{start:'2022-02-12 00:00:00',end:'2022-02-16 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">HPCA 2022</strong><p class="event-content">CCF Rank: A, When: Feb 12-16, 2022, Abstract Deadline: 2021-07-23 23:59:59 &#43;00:00, Submission Deadline: 2021-07-30 23:59:59 &#43;00:00, Notification Due: 2021-10-27</p></li>
@@ -57,6 +55,7 @@
 		<li data-timeline-node="{start:'2022-05-09 00:00:00',end:'2022-05-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICDE 2022</strong><p class="event-content">CCF Rank: A, When: May 9-12, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-11-17 23:59:59 -08:00, Notification Due: 2021-11-10</p></li>
 		<li data-timeline-node="{start:'2022-04-11 00:00:00',end:'2022-04-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SysML 2022</strong><p class="event-content">CCF Rank: , When: Apr 11-14, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-10-08 19:59:59, Notification Due: 2022-01-15</p></li>
 		<li data-timeline-node="{start:'2022-02-27 00:00:00',end:'2022-03-01 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FPGA 2022</strong><p class="event-content">CCF Rank: B, When: Feb 27-Mar 1, 2022, Abstract Deadline: 2021-09-06, Submission Deadline: 2021-09-06, Notification Due: 2021-10-31</p></li>
+		<li data-timeline-node="{start:'2022-05-15 00:00:00',end:'2022-05-18 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FCCM 2022</strong><p class="event-content">CCF Rank: C, When: May 15-18, 2022, Abstract Deadline: 2022-01-03, Submission Deadline: 2022-01-10, Notification Due: 2022-03-21</p></li>
 	    </ul>
 	</div>
 
@@ -120,20 +119,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:Wheat">
-							<th scope="row">
-								<a href="https://www.fccm.org/" target="_blank">FCCM 2022</a>
-							</th>
-							<td>C</td>
-							<td>Jan 3, 2022</td>
-							<td>Jan 10, 2022</td>
-							<td>Mar 21, 2022</td>
-							<td>May 15-18, 2022</td>
-							<td>
-								<div data-countdown="2022-01-10 08:00:00"></div>
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:Wheat">
 							<th scope="row">
 								<a href="https://www.sigmetrics.org/sigmetrics2022" target="_blank">SIGMETRICS 2022</a>
@@ -324,6 +309,20 @@
 							<td>May 9-12, 2022</td>
 							<td>
 								<div data-countdown="2022-05-09 08:00:00"></div>
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.fccm.org/" target="_blank">FCCM 2022</a>
+							</th>
+							<td>C</td>
+							<td>Jan 3, 2022</td>
+							<td>Jan 10, 2022</td>
+							<td>Mar 21, 2022</td>
+							<td>May 15-18, 2022</td>
+							<td>
+								<div data-countdown="2022-05-15 08:00:00"></div>
 							</td>
 						</tr>
 
@@ -743,7 +742,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Dec 15, 2021.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Jan 10, 2022.</p>
 		</div>
 	</div>
 
