--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 
 	<div id="my-timeline">
 	    <ul class="timeline-events">
-		<li data-timeline-node="{start:'2022-01-26 08:00:00',end:'2022-02-02 08:00:00',row:1,bgColor:'Wheat',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26 08:00:00 HKT, Submission Deadline: 2022-02-02 08:00:00 HKT, Notification Due: 2022-03-28</p></li>
-		<li data-timeline-node="{start:'2022-06-06 00:00:00',end:'2022-06-10 23:59:59',row:3,bgColor:'#e05f1a',color:'White', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26, Submission Deadline: 2022-02-02, Notification Due: 2022-03-28</p></li>
 		<li data-timeline-node="{start:'2022-02-28 00:00:00',end:'2022-03-04 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ASPLOS 2022</strong><p class="event-content">CCF Rank: A, When: Feb 28-Mar 4, 2022, Abstract Deadline: 2021-08-06 14:59:59 -07:00, Submission Deadline: 2021-08-13 14:59:59 -07:00, Notification Due: 2021-11-15</p></li>
 		<li data-timeline-node="{start:'2022-02-21 00:00:00',end:'2022-02-24 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FAST 2022</strong><p class="event-content">CCF Rank: A, When: Feb 21-24, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-09-23 23:59:59 -07:00, Notification Due: 2021-12-10</p></li>
 		<li data-timeline-node="{start:'2022-02-12 00:00:00',end:'2022-02-16 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">HPCA 2022</strong><p class="event-content">CCF Rank: A, When: Feb 12-16, 2022, Abstract Deadline: 2021-07-23 23:59:59 &#43;00:00, Submission Deadline: 2021-07-30 23:59:59 &#43;00:00, Notification Due: 2021-10-27</p></li>
@@ -44,6 +42,7 @@
 		<li data-timeline-node="{start:'2022-07-10 00:00:00',end:'2022-07-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 10-14, 2022, Abstract Deadline: 2021-11-15 17:00:00 -08:00, Submission Deadline: 2021-11-22 17:00:00 -08:00, Notification Due: 2022-02-21</p></li>
 		<li data-timeline-node="{start:'2022-03-14 00:00:00',end:'2022-03-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DATE 2022</strong><p class="event-content">CCF Rank: B, When: Mar 14-23, 2022, Abstract Deadline: 2021-09-12 23:59:59 -12:00, Submission Deadline: 2021-09-19 23:59:59 -12:00, Notification Due: 2021-11-11</p></li>
 		<li data-timeline-node="{start:'2022-04-05 00:00:00',end:'2022-04-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">EuroSys 2022</strong><p class="event-content">CCF Rank: B, When: Apr 5-8, 2022, Abstract Deadline: 2021-10-01, Submission Deadline: 2021-10-09, Notification Due: 2022-01-20</p></li>
+		<li data-timeline-node="{start:'2022-06-06 00:00:00',end:'2022-06-10 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26, Submission Deadline: 2022-02-02, Notification Due: 2022-03-28</p></li>
 		<li data-timeline-node="{start:'2022-05-30 00:00:00',end:'2022-06-03 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">IPDPS 2022</strong><p class="event-content">CCF Rank: B, When: May 30-Jun 3, 2022, Abstract Deadline: 2021-10-01 23:59:59 -12:00, Submission Deadline: 2021-10-08 23:59:59 -12:00, Notification Due: 2022-01-15</p></li>
 		<li data-timeline-node="{start:'2022-05-21 00:00:00',end:'2022-05-29 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICSE 2022</strong><p class="event-content">CCF Rank: A, When: May 21-29, 2022, Abstract Deadline: 2021-08-27, Submission Deadline: 2021-09-03 23:59:59, Notification Due: 2021-12-03</p></li>
 		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">OSDI 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2021-12-07 15:00:00 -07:00, Submission Deadline: 2021-12-14 15:00:00 -07:00, Notification Due: 2022-03-16</p></li>
@@ -116,20 +115,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:Wheat">
-							<th scope="row">
-								<a href="https://www.sigmetrics.org/sigmetrics2022" target="_blank">SIGMETRICS 2022</a>
-							</th>
-							<td>B</td>
-							<td>Jan 26, 2022</td>
-							<td>Feb 2, 2022</td>
-							<td>Mar 28, 2022</td>
-							<td>Jun 6-10, 2022</td>
-							<td>
-								<div data-countdown="2022-02-02 08:00:00"></div>
-							</td>
-						</tr>
-
 					</tbody>
 				</table>
 			</div>
@@ -320,6 +305,20 @@
 							<td>May 30-Jun 3, 2022</td>
 							<td>
 								<div data-countdown="2022-05-30 08:00:00"></div>
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.sigmetrics.org/sigmetrics2022" target="_blank">SIGMETRICS 2022</a>
+							</th>
+							<td>B</td>
+							<td>Jan 26, 2022</td>
+							<td>Feb 2, 2022</td>
+							<td>Mar 28, 2022</td>
+							<td>Jun 6-10, 2022</td>
+							<td>
+								<div data-countdown="2022-06-06 08:00:00"></div>
 							</td>
 						</tr>
 
@@ -739,7 +738,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Jan 30, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 2, 2022.</p>
 		</div>
 	</div>
 
