--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							<td>Oct 27, 2021</td>
 							<td>Feb 12-16, 2022</td>
 							<td>
-								<div data-countdown="2022-02-12 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -164,7 +164,7 @@
 							<td>Nov 16, 2021</td>
 							<td>Feb 12-16, 2022</td>
 							<td>
-								<div data-countdown="2022-02-12 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -738,7 +738,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 2, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 12, 2022.</p>
 		</div>
 	</div>
 
