--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
 	    <ul class="timeline-events">
 		<li data-timeline-node="{start:'2022-02-28 00:00:00',end:'2022-03-04 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ASPLOS 2022</strong><p class="event-content">CCF Rank: A, When: Feb 28-Mar 4, 2022, Abstract Deadline: 2021-08-06 14:59:59 -07:00, Submission Deadline: 2021-08-13 14:59:59 -07:00, Notification Due: 2021-11-15</p></li>
 		<li data-timeline-node="{start:'2022-02-21 00:00:00',end:'2022-02-24 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FAST 2022</strong><p class="event-content">CCF Rank: A, When: Feb 21-24, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-09-23 23:59:59 -07:00, Notification Due: 2021-12-10</p></li>
-		<li data-timeline-node="{start:'2022-02-12 00:00:00',end:'2022-02-16 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">HPCA 2022</strong><p class="event-content">CCF Rank: A, When: Feb 12-16, 2022, Abstract Deadline: 2021-07-23 23:59:59 &#43;00:00, Submission Deadline: 2021-07-30 23:59:59 &#43;00:00, Notification Due: 2021-10-27</p></li>
 		<li data-timeline-node="{start:'2022-06-11 00:00:00',end:'2022-06-15 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ISCA 2022</strong><p class="event-content">CCF Rank: A, When: Jun 11-15, 2022, Abstract Deadline: 2021-11-16 23:59:00 -12:00, Submission Deadline: 2021-11-23 23:59:00 -12:00, Notification Due: 2022-03-02</p></li>
 		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2022-01-06 23:59:59 &#43;00:00, Submission Deadline: 2022-01-13 23:59:59 &#43;00:00, Notification Due: 2022-04-29</p></li>
-		<li data-timeline-node="{start:'2022-02-12 00:00:00',end:'2022-02-16 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">PPoPP 2022</strong><p class="event-content">CCF Rank: A, When: Feb 12-16, 2022, Abstract Deadline: 2021-08-09, Submission Deadline: 2021-08-13, Notification Due: 2021-11-16</p></li>
 		<li data-timeline-node="{start:'2022-07-10 00:00:00',end:'2022-07-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 10-14, 2022, Abstract Deadline: 2021-11-15 17:00:00 -08:00, Submission Deadline: 2021-11-22 17:00:00 -08:00, Notification Due: 2022-02-21</p></li>
 		<li data-timeline-node="{start:'2022-03-14 00:00:00',end:'2022-03-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DATE 2022</strong><p class="event-content">CCF Rank: B, When: Mar 14-23, 2022, Abstract Deadline: 2021-09-12 23:59:59 -12:00, Submission Deadline: 2021-09-19 23:59:59 -12:00, Notification Due: 2021-11-11</p></li>
 		<li data-timeline-node="{start:'2022-04-05 00:00:00',end:'2022-04-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">EuroSys 2022</strong><p class="event-content">CCF Rank: B, When: Apr 5-8, 2022, Abstract Deadline: 2021-10-01, Submission Deadline: 2021-10-09, Notification Due: 2022-01-20</p></li>
@@ -140,34 +138,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.hpca-conf.org/2022/" target="_blank">HPCA 2022</a>
-							</th>
-							<td>A</td>
-							<td>Jul 23, 2021</td>
-							<td>Jul 30, 2021</td>
-							<td>Oct 27, 2021</td>
-							<td>Feb 12-16, 2022</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://ppopp22.sigplan.org" target="_blank">PPoPP 2022</a>
-							</th>
-							<td>A</td>
-							<td>Aug 9, 2021</td>
-							<td>Aug 13, 2021</td>
-							<td>Nov 16, 2021</td>
-							<td>Feb 12-16, 2022</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://www.usenix.org/conference/fast22/call-for-papers" target="_blank">FAST 2022</a>
@@ -417,6 +387,34 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://ppopp22.sigplan.org" target="_blank">PPoPP 2022</a>
+							</th>
+							<td>A</td>
+							<td>Aug 9, 2021</td>
+							<td>Aug 13, 2021</td>
+							<td>Nov 16, 2021</td>
+							<td>Feb 12-16, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.hpca-conf.org/2022/" target="_blank">HPCA 2022</a>
+							</th>
+							<td>A</td>
+							<td>Jul 23, 2021</td>
+							<td>Jul 30, 2021</td>
+							<td>Oct 27, 2021</td>
+							<td>Feb 12-16, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://www.hipeac.net/2022/budapest/#/" target="_blank">HiPEAC 2022</a>
@@ -738,7 +736,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 12, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 17, 2022.</p>
 		</div>
 	</div>
 
