--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<td>Dec 10, 2021</td>
 							<td>Feb 21-24, 2022</td>
 							<td>
-								<div data-countdown="2022-02-21 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -736,7 +736,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 17, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 21, 2022.</p>
 		</div>
 	</div>
 
