--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 	<div id="my-timeline">
 	    <ul class="timeline-events">
 		<li data-timeline-node="{start:'2022-02-28 00:00:00',end:'2022-03-04 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ASPLOS 2022</strong><p class="event-content">CCF Rank: A, When: Feb 28-Mar 4, 2022, Abstract Deadline: 2021-08-06 14:59:59 -07:00, Submission Deadline: 2021-08-13 14:59:59 -07:00, Notification Due: 2021-11-15</p></li>
-		<li data-timeline-node="{start:'2022-02-21 00:00:00',end:'2022-02-24 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FAST 2022</strong><p class="event-content">CCF Rank: A, When: Feb 21-24, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-09-23 23:59:59 -07:00, Notification Due: 2021-12-10</p></li>
 		<li data-timeline-node="{start:'2022-06-11 00:00:00',end:'2022-06-15 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ISCA 2022</strong><p class="event-content">CCF Rank: A, When: Jun 11-15, 2022, Abstract Deadline: 2021-11-16 23:59:00 -12:00, Submission Deadline: 2021-11-23 23:59:00 -12:00, Notification Due: 2022-03-02</p></li>
 		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2022-01-06 23:59:59 &#43;00:00, Submission Deadline: 2022-01-13 23:59:59 &#43;00:00, Notification Due: 2022-04-29</p></li>
 		<li data-timeline-node="{start:'2022-07-10 00:00:00',end:'2022-07-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 10-14, 2022, Abstract Deadline: 2021-11-15 17:00:00 -08:00, Submission Deadline: 2021-11-22 17:00:00 -08:00, Notification Due: 2022-02-21</p></li>
@@ -138,20 +137,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.usenix.org/conference/fast22/call-for-papers" target="_blank">FAST 2022</a>
-							</th>
-							<td>A</td>
-							<td>N/A</td>
-							<td>Sep 23, 2021</td>
-							<td>Dec 10, 2021</td>
-							<td>Feb 21-24, 2022</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://isfpga.org/" target="_blank">FPGA 2022</a>
@@ -387,6 +372,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.usenix.org/conference/fast22/call-for-papers" target="_blank">FAST 2022</a>
+							</th>
+							<td>A</td>
+							<td>N/A</td>
+							<td>Sep 23, 2021</td>
+							<td>Dec 10, 2021</td>
+							<td>Feb 21-24, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://ppopp22.sigplan.org" target="_blank">PPoPP 2022</a>
@@ -736,7 +735,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 21, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Feb 25, 2022.</p>
 		</div>
 	</div>
 
