--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 
 	<div id="my-timeline">
 	    <ul class="timeline-events">
-		<li data-timeline-node="{start:'2022-02-28 00:00:00',end:'2022-03-04 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ASPLOS 2022</strong><p class="event-content">CCF Rank: A, When: Feb 28-Mar 4, 2022, Abstract Deadline: 2021-08-06 14:59:59 -07:00, Submission Deadline: 2021-08-13 14:59:59 -07:00, Notification Due: 2021-11-15</p></li>
 		<li data-timeline-node="{start:'2022-06-11 00:00:00',end:'2022-06-15 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ISCA 2022</strong><p class="event-content">CCF Rank: A, When: Jun 11-15, 2022, Abstract Deadline: 2021-11-16 23:59:00 -12:00, Submission Deadline: 2021-11-23 23:59:00 -12:00, Notification Due: 2022-03-02</p></li>
 		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2022-01-06 23:59:59 &#43;00:00, Submission Deadline: 2022-01-13 23:59:59 &#43;00:00, Notification Due: 2022-04-29</p></li>
 		<li data-timeline-node="{start:'2022-07-10 00:00:00',end:'2022-07-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 10-14, 2022, Abstract Deadline: 2021-11-15 17:00:00 -08:00, Submission Deadline: 2021-11-22 17:00:00 -08:00, Notification Due: 2022-02-21</p></li>
@@ -136,20 +135,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://asplos-conference.org/" target="_blank">ASPLOS 2022</a>
-							</th>
-							<td>A</td>
-							<td>Aug 6, 2021</td>
-							<td>Aug 13, 2021</td>
-							<td>Nov 15, 2021</td>
-							<td>Feb 28-Mar 4, 2022</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://www.date-conference.com/" target="_blank">DATE 2022</a>
@@ -357,6 +342,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://asplos-conference.org/" target="_blank">ASPLOS 2022</a>
+							</th>
+							<td>A</td>
+							<td>Aug 6, 2021</td>
+							<td>Aug 13, 2021</td>
+							<td>Nov 15, 2021</td>
+							<td>Feb 28-Mar 4, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://isfpga.org/" target="_blank">FPGA 2022</a>
@@ -734,7 +733,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 2, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 5, 2022.</p>
 		</div>
 	</div>
 
