--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							<td>Nov 11, 2021</td>
 							<td>Mar 14-23, 2022</td>
 							<td>
-								<div data-countdown="2022-03-14 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -733,7 +733,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 5, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 14, 2022.</p>
 		</div>
 	</div>
 
