--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 		<li data-timeline-node="{start:'2022-06-11 00:00:00',end:'2022-06-15 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ISCA 2022</strong><p class="event-content">CCF Rank: A, When: Jun 11-15, 2022, Abstract Deadline: 2021-11-16 23:59:00 -12:00, Submission Deadline: 2021-11-23 23:59:00 -12:00, Notification Due: 2022-03-02</p></li>
 		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2022-01-06 23:59:59 &#43;00:00, Submission Deadline: 2022-01-13 23:59:59 &#43;00:00, Notification Due: 2022-04-29</p></li>
 		<li data-timeline-node="{start:'2022-07-10 00:00:00',end:'2022-07-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 10-14, 2022, Abstract Deadline: 2021-11-15 17:00:00 -08:00, Submission Deadline: 2021-11-22 17:00:00 -08:00, Notification Due: 2022-02-21</p></li>
-		<li data-timeline-node="{start:'2022-03-14 00:00:00',end:'2022-03-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DATE 2022</strong><p class="event-content">CCF Rank: B, When: Mar 14-23, 2022, Abstract Deadline: 2021-09-12 23:59:59 -12:00, Submission Deadline: 2021-09-19 23:59:59 -12:00, Notification Due: 2021-11-11</p></li>
 		<li data-timeline-node="{start:'2022-04-05 00:00:00',end:'2022-04-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">EuroSys 2022</strong><p class="event-content">CCF Rank: B, When: Apr 5-8, 2022, Abstract Deadline: 2021-10-01, Submission Deadline: 2021-10-09, Notification Due: 2022-01-20</p></li>
 		<li data-timeline-node="{start:'2022-06-06 00:00:00',end:'2022-06-10 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26, Submission Deadline: 2022-02-02, Notification Due: 2022-03-28</p></li>
 		<li data-timeline-node="{start:'2022-05-30 00:00:00',end:'2022-06-03 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">IPDPS 2022</strong><p class="event-content">CCF Rank: B, When: May 30-Jun 3, 2022, Abstract Deadline: 2021-10-01 23:59:59 -12:00, Submission Deadline: 2021-10-08 23:59:59 -12:00, Notification Due: 2022-01-15</p></li>
@@ -135,20 +134,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.date-conference.com/" target="_blank">DATE 2022</a>
-							</th>
-							<td>B</td>
-							<td>Sep 12, 2021</td>
-							<td>Sep 19, 2021</td>
-							<td>Nov 11, 2021</td>
-							<td>Mar 14-23, 2022</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://2022.eurosys.org/" target="_blank">EuroSys 2022</a>
@@ -342,6 +327,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.date-conference.com/" target="_blank">DATE 2022</a>
+							</th>
+							<td>B</td>
+							<td>Sep 12, 2021</td>
+							<td>Sep 19, 2021</td>
+							<td>Nov 11, 2021</td>
+							<td>Mar 14-23, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://asplos-conference.org/" target="_blank">ASPLOS 2022</a>
@@ -733,7 +732,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 14, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 24, 2022.</p>
 		</div>
 	</div>
 
