--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<td>Jan 20, 2022</td>
 							<td>Apr 5-8, 2022</td>
 							<td>
-								<div data-countdown="2022-04-05 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -732,7 +732,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Mar 24, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 5, 2022.</p>
 		</div>
 	</div>
 
