--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 		<li data-timeline-node="{start:'2023-06-19 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">PLDI 2023</strong><p class="event-content">CCF Rank: A, When: Jun 19-23, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-11-10, Notification Due: 2023-02-23</p></li>
 		<li data-timeline-node="{start:'2023-06-18 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMOD-3 2023</strong><p class="event-content">CCF Rank: A, When: Jun 18-23, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-15, Notification Due: 2023-02-23</p></li>
 		<li data-timeline-node="{start:'2023-08-28 00:00:00',end:'2023-09-01 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">VLDB* 2023</strong><p class="event-content">CCF Rank: A, When: Aug 28-Sep 1, 2023, Abstract Deadline: 2023-02-20, Submission Deadline: 2023-03-01, Notification Due: 2023-04-15</p></li>
-		<li data-timeline-node="{start:'2023-04-03 00:00:00',end:'2023-04-07 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICDE 2023</strong><p class="event-content">CCF Rank: A, When: Apr 3-7, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-08 23:59:59 -08:00, Notification Due: 2022-11-08</p></li>
 		<li data-timeline-node="{start:'2023-06-04 00:00:00',end:'2023-06-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SysML 2023</strong><p class="event-content">CCF Rank: , When: Jun 4-8, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-28 19:59:59, Notification Due: 2023-02-17</p></li>
 		<li data-timeline-node="{start:'2023-05-15 00:00:00',end:'2023-05-18 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FCCM* 2023</strong><p class="event-content">CCF Rank: C, When: May 15-18, 2023, Abstract Deadline: 2023-01-09, Submission Deadline: 2023-01-16, Notification Due: 2023-03-21</p></li>
 		<li data-timeline-node="{start:'2023-05-09 00:00:00',end:'2023-05-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">RTAS 2023</strong><p class="event-content">CCF Rank: B, When: May 9-12, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-31 23:59:00 -12:00, Notification Due: 2023-01-20</p></li>
@@ -158,20 +157,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>
-							</th>
-							<td>A</td>
-							<td>N/A</td>
-							<td>Oct 8, 2022</td>
-							<td>Nov 8, 2022</td>
-							<td>Apr 3-7, 2023</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://www.date-conference.com/" target="_blank">DATE 2023</a>
@@ -463,6 +448,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>
+							</th>
+							<td>A</td>
+							<td>N/A</td>
+							<td>Oct 8, 2022</td>
+							<td>Nov 8, 2022</td>
+							<td>Apr 3-7, 2023</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://asplos-conference.org/" target="_blank">ASPLOS Fall 2023</a>
@@ -826,7 +825,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 3, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 8, 2023.</p>
 		</div>
 	</div>
 
