--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							<td>Nov 11, 2022</td>
 							<td>Apr 17-19, 2023</td>
 							<td>
-								<div data-countdown="2023-04-17 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -825,7 +825,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 8, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 17, 2023.</p>
 		</div>
 	</div>
 
