--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							<td>Jan 20, 2023</td>
 							<td>May 9-12, 2023</td>
 							<td>
-								<div data-countdown="2023-05-09 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -165,7 +165,7 @@
 							<td>Aug 10, 2022</td>
 							<td>May 9-12, 2023</td>
 							<td>
-								<div data-countdown="2023-05-09 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -179,7 +179,7 @@
 							<td>Jan 18, 2023</td>
 							<td>May 9-12, 2023</td>
 							<td>
-								<div data-countdown="2023-05-09 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -823,7 +823,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 7, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 9, 2023.</p>
 		</div>
 	</div>
 
