--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<td>Mar 21, 2023</td>
 							<td>May 15-18, 2023</td>
 							<td>
-								<div data-countdown="2023-05-15 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -176,7 +176,7 @@
 							<td>Jan 31, 2023</td>
 							<td>May 15-19, 2023</td>
 							<td>
-								<div data-countdown="2023-05-15 08:00:00"></div>
+								In Progress
 							</td>
 						</tr>
 
@@ -820,7 +820,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 14, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 15, 2023.</p>
 		</div>
 	</div>
 
