deploy: 74f1f2097d06f470bd40d32255d3997ac44f8871

--- a/index.html
+++ b/index.html
@@ -91,20 +91,6 @@
 					<tbody>
 						<tr class="item" style="background-color:Wheat">
 							<th scope="row">
-								<a href="https://asplos-conference.org/" target="_blank">ASPLOS Summer* 2024</a>
-							</th>
-							<td>A</td>
-							<td>Aug 3, 2023</td>
-							<td>Aug 10, 2023</td>
-							<td>Nov 15, 2023</td>
-							<td>Apr 25-29, 2024</td>
-							<td>
-								<div data-countdown="2023-08-11 05:59:59"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:Wheat">
-							<th scope="row">
 								<a href="https://www.usenix.org/conference/fast24/call-for-papers" target="_blank">FAST 2024</a>
 							</th>
 							<td>A</td>
@@ -170,20 +156,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://icpp23.sci.utah.edu/" target="_blank">ICPP 2023</a>
-							</th>
-							<td>B</td>
-							<td>Apr 14, 2023</td>
-							<td>Apr 22, 2023</td>
-							<td>Jun 16, 2023</td>
-							<td>Aug 7-10, 2023</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://apsys23.skku.edu/" target="_blank">APSys 2023</a>
@@ -380,6 +352,20 @@
 							</td>
 						</tr>
 
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://asplos-conference.org/" target="_blank">ASPLOS Summer* 2024</a>
+							</th>
+							<td>A</td>
+							<td>Aug 3, 2023</td>
+							<td>Aug 10, 2023</td>
+							<td>Nov 15, 2023</td>
+							<td>Apr 25-29, 2024</td>
+							<td>
+								<div data-countdown="2024-04-25 08:00:00"></div>
+							</td>
+						</tr>
+
 					</tbody>
 				</table>
 			</div>
@@ -405,6 +391,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://icpp23.sci.utah.edu/" target="_blank">ICPP 2023</a>
+							</th>
+							<td>B</td>
+							<td>Apr 14, 2023</td>
+							<td>Apr 22, 2023</td>
+							<td>Jun 16, 2023</td>
+							<td>Aug 7-10, 2023</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://dac.com" target="_blank">DAC 2023</a>
@@ -796,7 +796,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Aug 7, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Aug 11, 2023.</p>
 		</div>
 	</div>
 
